updated profile picture

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="architecture-buildings-business-461907.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="Michael Lulich (cropped)-min.jpg" alt="" /></a>
 					<h1><strong>Michael Lulich</strong> 
 					</h1>
 					<h1><div id="green"><br />Fullstack Developer<br/></div></h1>
