updated profile picture

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="Michael Lulich (cropped)-min.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="https://media.licdn.com/dms/image/C5603AQHM3ERfJdLY_g/profile-displayphoto-shrink_200_200/0?e=1537401600&v=beta&t=fmHsSPxMLg7WU4yVscb6xqj0bA12PEJ5RBwFAwofypk" alt="" /></a>
 					<h1><strong>Michael Lulich</strong> 
 					</h1>
 					<h1><div id="green"><br />Fullstack Developer<br/></div></h1>
