updated about me

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 					<h1><strong>Michael Lulich</strong> 
 					</h1>
 					<h1><div id="green"><br />Fullstack Developer<br/></div></h1>
+					
 				</div>
 			</header>
 
@@ -29,10 +30,17 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>About Me<br />
+							<h2>A bit about me<br />
 							</h2>
 						</header>
-						<p>A former medical device sales rep who desires not only to work hard, but to work smart.</p>
+						<p>My name is Michael Lulich and I am a fullstack developer.<br /> My journey on this path hasn't been a typical one.<br /> I have learned to take the most from each stepping stone that has brought me here.<br /> I have always had an affinity for computers, however that affinity was typically reserved for video games, and not how/why computers worked.<br /> Even in college, I thought my path led towards healthcare.<br /> After a career in that field I found that is not where my passion resided.<br /> It wasn't until I discovered the multitude of self-teaching options, and welcoming online community that I decided it's never too late to learn a life-changing skills in:
+							<ul>
+								<li>Ruby on Rails</li>
+								<li>JavaScript</li>
+								<li>Vue.js</li>
+							</u>
+						</p>
+
 						<ul class="actions">
 							<li><a href="https://www.linkedin.com/in/michaellulich1" class="button">LinkedIn</a></li>
 							
