added customized icons, changed color scheme. updated: links, about me, interests

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </nav>
@@ -66,23 +66,23 @@
           <h1 class="mb-0">Michael 
             <span class="text-primary">Lulich</span>
           </h1>
-          <div class="subheading mb-5">1935 n. Fairfield Ave · Chicago, Il 60647 · (708) 945-3667 ·
+          <div class="subheading mb-5">Chicago, Il 60647 · (708) 945-3667 ·
             <a href="mailto:name@email.com">michael.lulich@gmail.com</a>
           </div>
-          <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="lead mb-5"><p>My name is Michael Lulich and I am a fullstack developer.<br /> My journey to programming hasn't been a typical one, but I have learned to take the most from each stepping stone that has lead me here.<br /> I have always had an affinity for computers, however that affinity was typically reserved for video games, and not how/why computers worked.<br /> Even in college, I thought my path led towards healthcare, and after a career in that field I found that is not where my passion resided.<br /> It wasn't until I discovered the multitude of self-teaching options, and a welcoming online community that I decided it's never too late to learn  life-changing skills. I have since completed the Actualize coding bootcamp, and am constantly on the lookout for opportunities to contribute, and learn.</p>
           <div class="social-icons">
-            <a href="#">
+            <a href="https://linkedin.com/in/michaellulich1">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="#">
+            <a href="https://github.com/michaellulich">
               <i class="fab fa-github"></i>
             </a>
-            <a href="#">
+           <!--  <a href="#">
               <i class="fab fa-twitter"></i>
             </a>
             <a href="#">
               <i class="fab fa-facebook-f"></i>
-            </a>
+            </a> -->
           </div>
         </div>
       </section>
@@ -95,16 +95,17 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <h3 class="mb-0">Actualize Bootcamp & Apprenticeship</h3>
+              <div class="subheading mb-3"></div>
+              <p>I participated in a 4 month intensive programming bootcamp. While attending the bootcamp I focused on skills in HTML 5, CSS, Ruby on Rails, VueJs, PostgreSQL, and Git.</p>
+              <p>Not only did they give me great understanding of these languages and frameworks, but they also taught me how to learn. I am confident that I can pick up skills in other languages given an adequate amount of time to learn. </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">June 2018 - September 2018</span>
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <!-- <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Web Developer</h3>
               <div class="subheading mb-3">Intelitec Solutions</div>
@@ -113,9 +114,9 @@
             <div class="resume-date text-md-right">
               <span class="text-primary">December 2011 - March 2013</span>
             </div>
-          </div>
+          </div> -->
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <!-- <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Junior Web Designer</h3>
               <div class="subheading mb-3">Shout! Media Productions</div>
@@ -135,7 +136,7 @@
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2008 - June 2010</span>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
@@ -149,26 +150,26 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
+              <h3 class="mb-0">University of Wisconsin-Madison</h3>
               <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <div>Biology</div>
+              <!-- <p>GPA: 3.23</p> -->
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">September 2006 - May 2010</span>
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row">
+          <!-- <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
+              <h3 class="mb-0">Carl Sandburg High School</h3>
               <div class="subheading mb-3">Technology Magnet Program</div>
               <p>GPA: 3.56</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2002 - May 2006</span>
             </div>
-          </div>
+          </div> -->
 
         </div>
       </section>
@@ -188,32 +189,44 @@
               <i class="fab fa-css3-alt"></i>
             </li>
             <li class="list-inline-item">
+            	<i class="fab fa-vuejs"></i>
+            </li>
+            <li class="list-inline-item">
+            	<i class="fab fa-github"></i>
+            </li>
+            <li class="list-inline-item">
+            	<i class="fas fa-gem"></i>
+            </li>
+            <li class="list-inline-item">
+            	<i class="fab fa-git"></i>
+            </li>
+            <!-- <li class="list-inline-item">
               <i class="fab fa-js-square"></i>
             </li>
             <li class="list-inline-item">
               <i class="fab fa-angular"></i>
-            </li>
-            <li class="list-inline-item">
+            </li> -->
+           <!--  <li class="list-inline-item">
               <i class="fab fa-react"></i>
-            </li>
-            <li class="list-inline-item">
+            </li> -->
+            <!-- <li class="list-inline-item">
               <i class="fab fa-node-js"></i>
-            </li>
-            <li class="list-inline-item">
+            </li> -->
+            <!-- <li class="list-inline-item">
               <i class="fab fa-sass"></i>
-            </li>
-            <li class="list-inline-item">
+            </li> -->
+           <!--  <li class="list-inline-item">
               <i class="fab fa-less"></i>
-            </li>
-            <li class="list-inline-item">
+            </li> -->
+           <!--  <li class="list-inline-item">
               <i class="fab fa-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
+            </li> -->
+           <!--  <li class="list-inline-item">
               <i class="fab fa-gulp"></i>
-            </li>
-            <li class="list-inline-item">
+            </li> -->
+            <!-- <li class="list-inline-item">
               <i class="fab fa-grunt"></i>
-            </li>
+            </li> -->
             <li class="list-inline-item">
               <i class="fab fa-npm"></i>
             </li>
@@ -242,14 +255,14 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+          <p>While not staring at a text-editor, I'm probably watching Premier League soccer, or checking out a local Chicago band. </p>
+          <p class="mb-0">I also enjoy the "nerd" things. Including but not limited to: Breath of the Wild, Star Trek: The Next Generation, and an unhealthy number of sub-Reddits that are too numerous to list here.</p>
         </div>
       </section>
 
       <hr class="m-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+      <!-- <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
           <h2 class="mb-5">Awards &amp; Certifications</h2>
           <ul class="fa-ul mb-0">
@@ -281,7 +294,7 @@
               Place - James Buchanan High School - Hackathon 2005</li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
     </div>
 
