updated about me

--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+            <a class="nav-link js-scroll-trigger" href="#education">Education</a>
           </li>
           <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
@@ -69,7 +69,7 @@
           <div class="subheading mb-5">Chicago, Il 60647 · (708) 945-3667 ·
             <a href="mailto:name@email.com">michael.lulich@gmail.com</a>
           </div>
-          <p class="lead mb-5"><p>My name is Michael Lulich and I am a fullstack developer.<br /> My journey to programming hasn't been a typical one, but I have learned to take the most from each stepping stone that has lead me here.<br /> I have always had an affinity for computers, however that affinity was typically reserved for video games, and not how/why computers worked.<br /> Even in college, I thought my path led towards healthcare, and after a career in that field I found that is not where my passion resided.<br /> It wasn't until I discovered the multitude of self-teaching options, and a welcoming online community that I decided it's never too late to learn  life-changing skills. I have since completed the Actualize coding bootcamp, and am constantly on the lookout for opportunities to contribute, and learn.</p>
+          <p class="lead mb-5"><p>I am a software developer with an extensive background in medical device sales. While the connections between these two fields may not be readily apparent, a love of growing and emergent technology underlies them both. My sales background fostered expertise in storytelling, mainly about new products; my software development has prepared me to tell a different type of story in a variety of programming languages..</p>
           <div class="social-icons">
             <a href="https://linkedin.com/in/michaellulich1">
               <i class="fab fa-linkedin-in"></i>
@@ -84,6 +84,14 @@
               <i class="fab fa-facebook-f"></i>
             </a> -->
           </div>
+        </div>
+      </section>
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+        <div class="my-auto">
+          <h2 class="mb-5">Interests</h2>
+          <p>While not staring at a text-editor, I'm probably watching Premier League soccer, or checking out a local Chicago band. </p>
+          <p class="mb-0">I also enjoy the "nerd" things. Including but not limited to: Breath of the Wild, Star Trek: The Next Generation, and an unhealthy number of sub-Reddits that are too numerous to list here.</p>
         </div>
       </section>
 
@@ -143,22 +151,6 @@
       </section>
 
       <hr class="m-0">
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
-        <div class="my-auto">
-          <h2 class="mb-5">Education</h2>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Wisconsin-Madison</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Biology</div>
-              <!-- <p>GPA: 3.23</p> -->
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2006 - May 2010</span>
-            </div>
-          </div>
 
           <!-- <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
@@ -232,7 +224,7 @@
             </li>
           </ul>
 
-          <div class="subheading mb-3">Workflow</div>
+          <!-- <div class="subheading mb-3">Workflow</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
@@ -247,18 +239,34 @@
               <i class="fa-li fa fa-check"></i>
               Agile Development &amp; Scrum</li>
           </ul>
-        </div>
+        </div> -->
       </section>
+
+<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
+        <div class="my-auto">
+          <h2 class="mb-5">Education</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">University of Wisconsin-Madison</h3>
+              <div class="subheading mb-3">Bachelor of Science</div>
+              <div>Biology</div>
+              <!-- <p>GPA: 3.23</p> -->
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">September 2006 - May 2010</span>
+            </div>
+          </div>
 
       <hr class="m-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+      <!-- <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
           <p>While not staring at a text-editor, I'm probably watching Premier League soccer, or checking out a local Chicago band. </p>
           <p class="mb-0">I also enjoy the "nerd" things. Including but not limited to: Breath of the Wild, Star Trek: The Next Generation, and an unhealthy number of sub-Reddits that are too numerous to list here.</p>
         </div>
-      </section>
+      </section> -->
 
       <hr class="m-0">
 
