updated about me, interests

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="subheading mb-5">Chicago, Il 60647 · (708) 945-3667 ·
             <a href="mailto:name@email.com">michael.lulich@gmail.com</a>
           </div>
-          <p class="lead mb-5"><p>I am a software developer with an extensive background in medical device sales. While the connections between these two fields may not be readily apparent, a love of growing and emergent technology underlies them both. My sales background fostered expertise in storytelling, mainly about new products; my software development has prepared me to tell a different type of story in a variety of programming languages..</p>
+          <p class="lead mb-5"><p>I am a software developer with an extensive background in medical device sales. While the connections between these two fields may not be readily apparent, a love of growing and emergent technology underlies them both. My sales background fostered expertise in storytelling, mainly about new products; my software development has prepared me to tell a different type of story in a variety of programming languages.</p>
           <div class="social-icons">
             <a href="https://linkedin.com/in/michaellulich1">
               <i class="fab fa-linkedin-in"></i>
@@ -91,7 +91,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
           <p>While not staring at a text-editor, I'm probably watching Premier League soccer, or checking out a local Chicago band. </p>
-          <p class="mb-0">I also enjoy the "nerd" things. Including but not limited to: Breath of the Wild, Star Trek: The Next Generation, and an unhealthy number of sub-Reddits that are too numerous to list here.</p>
+          <p class="mb-0">I also enjoy the "nerd" things. Including but not limited to: Breath of the Wild, Star Trek: The Next Generation, and trying different coffee roasters.</p>
         </div>
       </section>
 
