--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image icon fa-signal"><img src="images/DowntownChicago_BodyImage.jpg" alt="" /></a>
+						<a href="#" class="image icon"><img src="images/DowntownChicago_BodyImage.jpg" alt="" /></a>
 						<div class="content">
 							<h3>ABOUT ME</h3>
 							<p>
@@ -48,7 +48,7 @@
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="#" class="image icon fa-code"><img src="images/matrix-code.jpg" alt="" /></a>
+						<a href="#" id='locale' class="image icon "><img src="images/locale.png" alt="" /></a>
 						<div class="content">
 							<h3>PROGRAMMING</h3>
 							Experience with:
@@ -64,7 +64,7 @@
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="#" class="image icon fa-mobile"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="#" class="image icon "><img src="images/matrix-code.jpg" alt="" /></a>
 						<div class="content">
 							<h3>INTERESTS</h3>
 							<ul>
@@ -225,7 +225,7 @@
 					<h3>Actualize</h3>
 					<p>My capstone project is called Locations of Cool Alternative Listening Events (LoCALE). It sought to bridge the gap between local Chicago musicians and their prospective fans.</p>
 					<ul class="actions special">
-						<li><a href="#" class="button">Video Demo</a></li>
+						<li><a href="#" class="button">Video Demo(coming soon)</a></li>
 					</ul>
 				</footer>
 
@@ -236,13 +236,12 @@
 				<div class="container medium">
 
 					<header class="major last">
-						<h2>Get in touch</h2>
+						<h2>REACH OUT</h2>
 					</header>
 
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor
-					orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
+					<p>I would love to hear from you.</p>
 
-					<form method="post" action="#">
+					<!-- <form method="post" action="#">
 						<div class="row">
 							<div class="col-6 col-12-mobilep">
 								<input type="text" name="name" placeholder="Name" />
@@ -259,18 +258,18 @@
 								</ul>
 							</div>
 						</div>
-					</form>
+					</form> -->
 
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
+						<li><a href="mailto:michael.lulich@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>					
+						<li><a href="https://github.com/michaellulich" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/michaellulich1/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					</ul>
 
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Untitled. All rights reserved.</li><li>Michael Lulich-Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 				</div>
