--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="#" id='locale' class="image icon "><img src="images/locale.png" alt="" /></a>
+						<a href="#" id='locale' class="image icon "><img src="images/LoCALE.png" alt="" /></a>
 						<div class="content">
 							<h3>PROGRAMMING</h3>
 							Experience with:
@@ -264,7 +264,7 @@
 						<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
 						<li><a href="mailto:michael.lulich@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>					
-						<li><a href="https://github.com/michaellulich" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/michaellulichsbl" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/michaellulich1/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					</ul>
 
